# sunfish_c

./: .gitignore  CMakeLists.txt  README.md  arraylist.c  arraylist.h  chessBoard.c  chessBoard.h  constants.c  constants.h  debug.c  debug.h  killerMovesTable.c  killerMovesTable.h  main.c  map.c  map.h  move.c  move.h  moveScoreGenerator.c  moveScoreGenerator.h  pieceSquareTables.c  pieceSquareTables.h  position.c  position.h  randomUnsigned64bitIntegers.c  randomUnsigned64bitIntegers.h  search.c  search.h  todo.txt  tpMove.c  tpMove.h  tpScore.c  tpScore.h  transpositionTable.c  transpositionTable.h  uci.c  uci.h  utils.c  utils.h  zobrist.c  (+1 more)
.run/: sunfish_c.run.xml
engine-executable/: sunfish_c
src/: CMakeLists.txt  chessBoard.c  chessBoard.h  constants.c  constants.h  killerMovesTable.c  killerMovesTable.h  main.c  move.c  move.h  moveScoreGenerator.c  moveScoreGenerator.h  perft.c  perft.h  pieceSquareTables.c  pieceSquareTables.h  position.c  position.h  randomUnsigned64bitIntegers.c  search.c  search.h  tpMove.c  tpMove.h  tpScore.c  tpScore.h  uci.c  zobrist.c  zobrist.h
